@@ -1,3 +1,10 @@
+2005-11-02  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktextbtree.c (_gtk_text_line_char_to_byte_offsets): 
+	* gtk/gtktextiter.c (gtk_text_iter_backward_chars): Replace
+	manual offset calculations by g_utf8_offset_to_pointer().
+	(#320360, Paolo Borelli)
+
 Tue Nov  1 16:18:24 2005  Tim Janik  <timj@imendio.com>
 
 	* gtk/gtkrbtree.[hc]: get rid of GAllocator usage, allocate and free 
